Fix nav border and color in dark mode

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
     --color-accent:oklch(0.74 0.14 174);
+    color-scheme: dark;
 }
 
 body {
@@ -14,9 +15,10 @@ body {
   }
 
 nav {
+    --border-color: oklch(50% 10% 200 / 40%);
     display: flex;
     margin-bottom: 2em;
-    border-bottom: 1px solid oklch(80% 3% 200);
+    border-bottom: 1px solid var(--border-color);
 }
 
 nav a {
@@ -29,7 +31,7 @@ nav a {
 
 nav a:hover{
     border-bottom: 0.4em solid var(--color-accent);
-    background-color: oklch(from var(--color-accent) 95% 5% h);
+    background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
     padding-bottom: 0.1em;
 }
 
